--- a/audio/audio_ext_spkr.conf
+++ b/audio/audio_ext_spkr.conf
@@ -1,5 +1,5 @@
 global_config {
-    name Ali
+    name deen
 }
 
 ring {
@@ -7,7 +7,6 @@ ring {
     #16 steps total, 15...0.  In case of truncated list, last attenuation
     #given will be applied to all lower volume steps
     attenuation 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-    knee_step 16
 }
 
 voice {
@@ -15,7 +14,6 @@ voice {
     #16 steps total, 15...0.  In case of truncated list, last attenuation
     #given will be applied to all lower volume steps
     attenuation 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-    knee_step 17
 }
 
 media {
@@ -23,5 +21,4 @@ media {
     #16 steps total, 15...0.  In case of truncated list, last attenuation
     #given will be applied to all lower volume steps
     attenuation 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-    knee_step 16
 }
