--- a/rootdir/etc/init.mmi.chipset.rc
+++ b/rootdir/etc/init.mmi.chipset.rc
@@ -1,13 +1,11 @@
+# Moto Mods
+import /vendor/etc/init/hw/init.mods.rc
+
 # Chipset-specific init settings
 on boot
     # Change permission for type C params
     chown root oem_5004 /sys/devices/soc/78b6000.i2c/i2c-2/2-0022/CC_state
     chown root oem_5004 /sys/devices/soc/78b6000.i2c/i2c-2/2-0022/enable_vconn
-
-    # usb driver parameter permissions
-    chown root oem_5004 /sys/module/phy_msm_usb/parameters/host_mode_disable
-    chmod 0660 /sys/module/phy_msm_usb/parameters/host_mode_disable
-
     # Change ownership and permission for AMPS factory testing
     chown root oem_5004 /sys/class/i2c-adapter/i2c-2/2-002d/enable
     chmod 0660 /sys/class/i2c-adapter/i2c-2/2-002d/enable
@@ -29,6 +27,26 @@ on post-fs-data
     # This dir only for preinstall app so libs
     mkdir /data/app-lib2 0771 system system
 
+service fingerprintd /system/bin/fingerprintd
+    class late_start
+    user system
+    group oem_5015 uhid
+
+on property:sys.boot_completed=1
+    # For cross-reboot FFU script tracking (unencrypted case)
+    mkdir /data/vendor/ffu 0750 shell shell
+    start emmc_ffu
+
+
+service emmc_ffu /vendor/bin/emmc_ffu.sh
+    user root
+    class late_start
+    oneshot
+    disabled
+
+on property:vendor.need_ffu=1
+    setprop sys.dbg.ffu_start 1
+
 on moto-charger
     setprop ro.board.platform msm8953
     load_system_props
@@ -37,6 +55,7 @@ on moto-charger
     setprop sys.usb.config charging
     start qcom-post-boot
     start vendor.hvdcp_opti
+    start vendor.power_off_alarm
     start gbmodinstall
     start vendor.charge_only_mode
     start vendor.batt_health
@@ -45,3 +64,6 @@ on moto-charger
 # Set hub drive strength to +5%
 on property:ro.bootmode=normal
    write /sys/module/usb3813_hub/parameters/boost_val 3
+
+on property:ro.vendor.build.motfactory=1
+    write /sys/class/power_supply/battery/device/factory_image_mode 1
