--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -1,4 +1,4 @@
-# Copyright (c) 2012-2015, 2017-2019, The Linux Foundation. All rights reserved.
+# Copyright (c) 2012-2015, 2017-2018, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -30,8 +30,7 @@
 # be added to search path for firmware loading
 firmware_directories /vendor/firmware_mnt/image/
 
-# the DIAG device node is not world writable/readable.
-/dev/diag                 0660   system     oem_2901
+/dev/diag                 0666   system     oem_2901
 /dev/ttydiag0             0660   system     oem_2901
 /dev/ttydiag1             0660   system     oem_2901
 /dev/ttydiag2             0660   system     oem_2901
@@ -58,8 +57,9 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/dpl_ctrl             0660   usb        usb
 /dev/ipa_odl_ctl          0660   radio      radio
 /dev/ipa_adpl             0660   system     oem_2905
-/dev/synx_device          0660   root       camera
 /dev/hab                  0666   system     system
+/dev/synx_device          0660   root       camera
+/dev/fuse                 0660   system     system
 
 #permissions for CSVT
 /dev/smd11                0660   radio      radio
@@ -127,29 +127,23 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/at_usb0              0640   radio      radio
 /dev/at_mdm0              0640   radio      radio
 /dev/video*               0660   system     camera
-/dev/cvp*                 0660   system     camera
 /dev/v4l2-hal-ctrl        0660   system     camera
 /dev/media*               0660   system     camera
 /dev/v4l-subdev*          0660   system     camera
 /dev/qseecom              0660   system     drmrpc
 /dev/qce                  0660   system     drmrpc
-/dev/smcinvoke            0660   system     drmrpc
+/dev/smcinvoke            0660   system     system
 /dev/qsee_ipc_irq_spss    0660   system     drmrpc
 /dev/seemplog             0660   system     system
 /dev/pft                  0660   system     drmrpc
 /dev/spcom                0660   system     system
-/dev/spss_utils           0660   system     system
 /dev/sp_kernel            0660   system     system
-/dev/sp_nvm               0660   system     system
 /dev/sp_ssr               0660   system     system
 /dev/sp_keymaster         0660   system     system
 /dev/sec_nvm_*            0660   system     system
 /dev/cryptoapp            0660   system     system
 /dev/spdaemon_ssr         0660   system     system
-/dev/spu_hal_ssr          0660   system     system
-/dev/iuicc                0660   system     system
-/dev/iuicc0               0660   system     system
-/dev/iuicc1               0660   system     system
+/dev/cam-hyp-intf*        0660   system     camera
 /dev/gemini0              0660   system     camera
 /dev/jpeg0                0660   system     camera
 /dev/jpeg1                0660   system     camera
@@ -160,26 +154,12 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/system_health_monitor 0644  radio      system
 /dev/mdss_rotator         0664   system     system
 
-#QDSS
-/dev/byte-cntr            0660   system    oem_2902
-/dev/mhi_qdss             0660   system    oem_2902
-/sys/class/qdss_bridge/mhi_qdss  mode      0660     system   oem_2902
+# vm_bms
+/dev/vm_bms               0660   system     system
+/dev/battery_data         0660   system     system
 
-#qg
-/dev/qg                   0660  system     system
-/dev/qg_battery           0660  system     system
-
-#qvr
-/dev/qvr_external_sensor_ioctl      0660  system  system
-/sys/kernel/qvr_external_sensor/fd  0660  system  system
-
-# wlan
-/dev/wcnss_wlan           0660   system     system
-/dev/wcnss_ctrl           0660   system     system
-/sys/devices/soc/a000000.qcom,wcnss-wlan/net/wlan0/queues/rx-* rps_cpus           0660   system     system
-/sys/devices/soc/a000000.qcom,wcnss-wlan/net/p2p0/queues/rx-* rps_cpus            0660   system     system
+# Camera
 /dev/spidev0.0            0660   system     audio
-/dev/i2c-7                0660   system     audio
 /dev/msm_camera/*         0660   system     camera
 /dev/gemini/              0660   system     camera
 /dev/mercury0             0660   system     camera
@@ -188,6 +168,7 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/msm_vidc_dec_sec     0660   system     audio
 /dev/msm_vidc_enc         0660   system     audio
 /dev/msm_rotator          0660   system     system
+/dev/hw_random            0600   root       root
 /dev/sdsprpc-smd          0660   system     system
 
 #permissions for audio
@@ -231,33 +212,43 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/i2c-5                0660   media       media
 /dev/avtimer              0660   system     audio
 /dev/spidev2.0            0660   system     audio
-/dev/aud_pasthru_adsp     0660   system     audio
+/dev/cpu_dma_latency      0660   system     audio
+
 # DVB devices
 /dev/dvb/adapter0/demux*  0440   media       media
 /dev/dvb/adapter0/dvr*    0660   media       media
 /dev/dvb/adapter0/video*  0660   media       media
+
+# Block devices
+/dev/block/bootdevice/by-name/hob          0660 radio radio
+/dev/block/bootdevice/by-name/dhob         0660 radio radio
+/dev/block/bootdevice/by-name/clogo        0660 root oem_5004
+/dev/block/bootdevice/by-name/cid          0660 root oem_5004
+/dev/block/bootdevice/by-name/logs         0640 root log
+/dev/block/bootdevice/by-name/utags        0660 oem_5004 system
+/dev/block/bootdevice/by-name/utagsBackup  0660 oem_5004 system
 
 # Broadcast devices
 /dev/tsc_mux0             0660   media       media
 /dev/tsc_ci0              0660   media       media
 
 # sensors
-/dev/sensors              0660   system     system
+/dev/sensors              0660   root     system
 /sys/devices/i2c-12/12-*  pollrate_ms 0664 system system
 /sys/devices/f9925000.i2c/i2c-0/0-*                 enable         0660    input    system
 /sys/devices/f9925000.i2c/i2c-0/0-*                 poll_delay     0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            enable         0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            poll_delay     0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            enable_wakeup  0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            max_latency    0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            flush          0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            calibrate      0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            enable         0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            poll_delay     0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            enable_wakeup  0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            max_latency    0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            flush          0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            calibrate      0660    input    system
+/sys/devices/soc/78b6000.i2c/i2c-0/0-*            enable         0660    input    system
+/sys/devices/soc/78b6000.i2c/i2c-0/0-*            poll_delay     0660    input    system
+/sys/devices/soc/78b6000.i2c/i2c-0/0-*            enable_wakeup  0660    input    system
+/sys/devices/soc/78b6000.i2c/i2c-0/0-*            max_latency    0660    input    system
+/sys/devices/soc/78b6000.i2c/i2c-0/0-*            flush          0660    input    system
+/sys/devices/soc/78b6000.i2c/i2c-0/0-*            calibrate      0660    input    system
+/sys/devices/soc/78b5000.i2c/i2c-1/1-*            enable         0660    input    system
+/sys/devices/soc/78b5000.i2c/i2c-1/1-*            poll_delay     0660    input    system
+/sys/devices/soc/78b5000.i2c/i2c-1/1-*            enable_wakeup  0660    input    system
+/sys/devices/soc/78b5000.i2c/i2c-1/1-*            max_latency    0660    input    system
+/sys/devices/soc/78b5000.i2c/i2c-1/1-*            flush          0660    input    system
+/sys/devices/soc/78b5000.i2c/i2c-1/1-*            calibrate      0660    input    system
 /sys/devices/virtual/optical_sensors/proximity      ps_adc         0660    input    system
 /sys/devices/virtual/optical_sensors/proximity      ps_poll_delay  0660    input    system
 /sys/devices/virtual/optical_sensors/lightsensor    ls_auto        0660    input    system
@@ -277,14 +268,36 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/devices/platform/soc/a84000.i2c/i2c-2/2-0020/input/input*  secure_touch          0440 system drmrpc
 /sys/devices/platform/soc/a84000.i2c/i2c-2/2-0020/input/input*  secure_touch_enable   0660 system drmrpc
 
-# GNSS Device premissions
-/dev/gnss_sirf             0660   gps     gps
+# native sensors input
+/sys/devices/virtual/input/input*   enable_int       0660  system   input
+/sys/devices/virtual/input/input*   gyro_op_mode     0660  system   input
+/sys/devices/virtual/input/input*   acc_range        0660  system   input
+/sys/devices/virtual/input/input*   acc_value        0660  system   input
+/sys/devices/virtual/input/input*   gyro_odr         0660  system   input
+/sys/devices/virtual/input/input*   fifo_data_sel    0660  system   input
+/sys/devices/virtual/input/input*   fifo_watermark   0660  system   input
+/sys/devices/virtual/input/input*   enable           0660  system   input
+/sys/devices/virtual/input/input*   acc_odr          0660  system   input
+/sys/devices/virtual/input/input*   temperature      0660  system   input
+/sys/devices/virtual/input/input*   acc_op_mode      0660  system   input
+/sys/devices/virtual/input/input*   fifo_bytecount   0660  system   input
+/sys/devices/virtual/input/input*   gyro_range       0660  system   input
+/sys/devices/virtual/input/input*   gyro_value       0660  system   input
+
+#nfc permissions
+/dev/nfc-nci              0660    nfc         nfc
+/dev/nq-nci               0660    nfc         nfc
+/dev/assd                 0660    nfc         nfc 
+/dev/pn544                0660    nfc         nfc
+/dev/bcm2079x-i2c         0660    nfc         nfc
+
+# GNSS PPS Device premissions
+/dev/pps*                  0660   gps     gps
 
 # laser sensor access
 /sys/devices/virtual/input/input*                   enable_ps_sensor 0660  system   input
 /sys/devices/virtual/input/input*                   set_delay_ms     0660  system   input
 /sys/devices/virtual/input/input*                   do_flush         0660  system   input
-/dev/laser                0660   system     camera
 
 # vm_bms
 /dev/vm_bms               0660   system     system
@@ -293,8 +306,8 @@ firmware_directories /vendor/firmware_mnt/image/
 # wlan
 /dev/wcnss_wlan           0660   system     system
 /dev/wcnss_ctrl           0660   system     system
-/sys/devices/soc/600000.qcom,pcie/pci0000:00/0000:00:00.0/0000:01:00.0/net/wlan0/queues/rx-* rps_cpus 0660 system system
-/sys/devices/soc/600000.qcom,pcie/pci0000:00/0000:00:00.0/0000:01:00.0/net/p2p0/queues/rx-* rps_cpus 0660 system system
+/sys/devices/soc/a000000.qcom,wcnss-wlan/net/wlan0/queues/rx-* rps_cpus           0660   system     system
+/sys/devices/soc/a000000.qcom,wcnss-wlan/net/p2p0/queues/rx-* rps_cpus            0660   system     system
 
 # wigig
 /sys/bus/pci/drivers/wil6210* 0000:01:00.0/wil6210/fst_link_loss 0660 wifi wifi
@@ -303,12 +316,6 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/bus/pci/drivers/wil6210* 0000:01:00.0/net/wigig0/queues/rx-0/rps_cpus 0660 system system
 /sys/bus/pci/drivers/wil6210* 0000:01:00.0/net/wigig0/gro_flush_timeout 0660 system system
 /sys/devices/virtual/net/bond0 queues/rx-0/rps_cpus 0660 system system
-/dev/wigig_sensing        0660   system     system
-
-#nfc permissions
-/dev/nfc-nci              0660    nfc         nfc
-/dev/nq-nci               0660    nfc         nfc
-/dev/assd                 0660    nfc         nfc
 
 # UIO devices
 /dev/uio0                 0660   system     system
@@ -318,6 +325,9 @@ firmware_directories /vendor/firmware_mnt/image/
 # SSR devices
 /dev/subsys_*         0640   system     system
 
+# Add device block for FRP
+/dev/block/bootdevice/by-name/frp 0600 system system
+
 # Ultrasound device
 /dev/usf1                 0660   system     system
 
@@ -325,54 +335,18 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/ramdump*             0640   system     system
 
 # Fingerprint device
-/dev/qbt*                 0660   system     system
-/sys/class/fts/touch_aoi aoi_set 0660 root system
-/sys/class/fts/touch_aoi power_set 0660 root system
-
-# I2C
-/dev/i2c-*                0660   system     system
+/dev/qbt1000              0660   system     system
 
 #ImproveTouch device
 /dev/hbtp_input           0660   system     system
 /dev/hbtp_vm              0660   system     system
 
 # Add device block for FRP
-/dev/block/platform/soc/7824900.sdhci/by-name/config    0600   system     system
-/dev/block/platform/soc/7464900.sdhci/by-name/frp       0600   system     system
-/dev/block/platform/soc/624000.ufshc/by-name/frp        0600   system     system
-/dev/block/platform/soc/1da4000.ufshc/by-name/frp       0600   system     system
-/dev/block/platform/soc/c0c4000.sdhci/by-name/frp       0600   system     system
-/dev/block/platform/soc/1d84000.ufshc/by-name/frp       0600   system     system
-/dev/block/platform/soc/7c4000.sdhci/by-name/frp        0600   system     system
-/dev/block/platform/soc/4744000.sdhci/by-name/frp       0600   system     system
-/dev/block/platform/soc/4804000.ufshc/by-name/frp       0600   system     system
-
-# This is temporary while using SD card for initial bring-up
-/dev/block/platform/soc/8804000.sdhci/by-name/frp       0600   system     system
-
-/dev/block/platform/soc/*/by-name/frp   0600   system     system
+/dev/block/platform/soc/7824900.sdhci/by-name/frp       0600   system     system
+/dev/block/bootdevice/by-name/frp 0600 system system
 
 # Kmsg device
 /dev/kmsg                                               0620   root       system
-
-# LED class devices
-/sys/class/leds/red      delay_on     0640    system    system
-/sys/class/leds/red      delay_off    0640    system    system
-/sys/class/leds/red      breath       0640    system    system
-/sys/class/leds/green    delay_on     0640    system    system
-/sys/class/leds/green    delay_off    0640    system    system
-/sys/class/leds/green    breath       0640    system    system
-/sys/class/leds/blue     delay_on     0640    system    system
-/sys/class/leds/blue     delay_off    0640    system    system
-/sys/class/leds/blue     breath       0640    system    system
-
-# NPU device
-/dev/msm_npu             0644   system     system
-
-#Memory Offline
-/sys/devices/system/memory/memory* state    0660 system system
-
-/sys/devices/virtual/hdcp/msm_hdcp  min_level_change 0664    system  graphics
 
 # sys-fs display
 /sys/class/graphics/fb*     hpd                      0664    system  graphics
@@ -403,20 +377,66 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/class/graphics/fb0     modes                    0664    system  graphics
 /sys/class/graphics/fb0     mode                     0664    system  graphics
 /sys/class/graphics/fb0     msm_cmd_autorefresh_en   0664    system  graphics
+/sys/class/graphics/fb0     dynamic_bitclk           0664    system  graphics
+
+# I2C
+/dev/i2c-*                0660   system     system
+
+#JOT fixture devices for AMPS factory testing
+/dev/hidraw0              0660   root       oem_5004
+/dev/hidraw1              0660   root       oem_5004
+
+# Laser device
+/dev/laser                0660   system     camera
+
+# haptic
+/dev/drv2605              0660   system     system
 
 #Egistec fingerprint
-/dev/esfp0                0660   system     system
+/dev/esfp0		  0660   system     system
 
-#DTV
-/dev/isdbt                 0660 oem_5019  oem_5019
+# USB role switch
+/sys/class/dual_role_usb/*	data_role	0444	system	system
+/sys/class/dual_role_usb/*	power_role	0444	system	system
+/sys/class/dual_role_usb/*	mode		0444	system	system
 
-# LED class vibrator
-/sys/class/leds/vibrator state        0660    system    system
-/sys/class/leds/vibrator duration     0660    system    system
-/sys/class/leds/vibrator activate     0660    system    system
-/sys/class/leds/vibrator extra        0660    system    system
-/sys/class/leds/vibrator seq          0660    system    system
+# LED class devices
+/sys/class/leds/red      delay_on     0640    system    system
+/sys/class/leds/red      delay_off    0640    system    system
+/sys/class/leds/red      breath       0640    system    system
+/sys/class/leds/green    delay_on     0640    system    system
+/sys/class/leds/green    delay_off    0640    system    system
+/sys/class/leds/green    breath       0640    system    system
+/sys/class/leds/blue     delay_on     0640    system    system
+/sys/class/leds/blue     delay_off    0640    system    system
+/sys/class/leds/blue     breath       0640    system    system
+
+# MOD camera device
+/dev/mot_camera_ext*               0660   system     camera
+/sys/devices/virtual/video4linux/mot_camera_ext* open_mode 0660 system camera
+/sys/devices/virtual/video4linux/mot_camera_ext* uevent 0660 root mot_mod
+/sys/devices/virtual/video4linux/video* open_mode 0660 system camera
+/sys/devices/virtual/video4linux/video* uevent 0660 root mot_mod
 
 # Trustonic TEE device
 /dev/mobicore             0600   system     system
 /dev/mobicore-user        0666   system     system
+
+# IIO (dynamic sensors)
+/sys/devices/iio_sysfs_trigger/add_trigger          0220    system      system
+/sys/devices/iio_sysfs_trigger/remove_trigger       0220    system      system
+
+/sys/devices/iio:device* buffer/*                   0664    system      system
+/sys/devices/iio:device* scan_elements/in_*_en      0664    system      system
+/sys/devices/iio:device* trigger/current_trigger    0664    system      system
+/sys/devices/iio:device* in_sampling_frequency      0664    system      system
+/sys/devices/iio:device* max_latency_ns             0664    system      system
+/sys/devices/iio:device* flush                      0220    system      system
+
+/dev/iio:device*                                    0600    system      system
+
+#Memory Offline
+/sys/devices/system/memory/memory* state    0660 system system
+
+# NPU device
+/dev/msm_npu             0644   system     system
